--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist",
   "scripts": {
     "build": "tsc -p .",
-    "prepare": "npm run build",
+    "install": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Asbert Ma <stayinalive@msn.cn>",
