--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "trace thor txs",
   "main": "./dist",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc -p .",
     "install": "npm run build",
